--- a/01. Series 생성 및 속성.ipynb
+++ b/01. Series 생성 및 속성.ipynb
@@ -7,7 +7,9 @@
     "#### Pandas \n",
     "- Series(1차원 데이터)\n",
     "    - https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.html\n",
-    "- Dataframe(2차원 데이터(이상))"
+    "    \n",
+    "- Dataframe(2차원 이상 데이터)\n",
+    "    - https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.html"
    ]
   },
   {
