Data Frame from Pandas

--- a/16. Data Frame Pivot table.ipynb
+++ b/16. Data Frame Pivot table.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- pivot_table : 각 구성요소에 적용할 데이터프레임의 열을 각각 함수의 인자로 전달.\n",
+    "- pivot_table() : 각 구성요소에 적용할 데이터프레임의 열을 각각 함수의 인자로 전달.\n",
     "    - index : 행 위치에 들어갈 열.\n",
     "    - columns : 열 위치에 들어갈 열.\n",
     "    - values : 데이터로 사용할 열.\n",
